K8s-deployment/Charts/databroker/external-client-aws-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    ## specify the elastic ip allocation id in quotes 
    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: "<eip-alloc-id>"
    ## specify the  subnet-id in quotes in K8s cluster is deployed 
    service.beta.kubernetes.io/aws-load-balancer-subnets: "<subnet-id>"

  namespace: rabbitmq
  name: rabbitmq-external-client
  labels:
    app: rabbitmq
    type: LoadBalancer
spec:
  type: LoadBalancer
  # create a public ip beforehand and specify here
  loadBalancerIP: <public IP>
  externalTrafficPolicy: Local
  ports:
   - name: https
     port: 28041
     targetPort: 15671
     protocol: TCP

   - name: amqps
     port: 24567
     targetPort: 5671
     protocol: TCP
  selector: 
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/instance: rabbitmq
