K8s-deployment/Charts/databroker/external-client-azure-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    # For azure service, uncomment below and comment annotations of aws and specify resource group in quotes
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "<resource group name>"

  namespace: rabbitmq
  name: rabbitmq-external-client
  labels:
    app: rabbitmq
    type: LoadBalancer
spec:
  type: LoadBalancer
  # create a public ip beforehand and specify here
  loadBalancerIP: <public IP>
  externalTrafficPolicy: Local
  ports:
   - name: https
     port: 28041
     targetPort: 15671
     protocol: TCP

   - name: amqps
     port: 24567
     targetPort: 5671
     protocol: TCP
  selector: 
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/instance: rabbitmq
