K8s-deployment/Charts/databroker/external-client-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    # For aws service
    #service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    ## specify the elastic ip allocation id in quotes 
    #service.beta.kubernetes.io/aws-load-balancer-eip-allocations: "<eip-alloc-id>"
    ## specify the  subnet-id in quotes in K8s cluster is deployed 
    # service.beta.kubernetes.io/aws-load-balancer-subnets: "<subnet-id>"

    # For azure service, uncomment below and comment annotations of aws and specify resource group in quotes
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "resourceGroupName"

  namespace: rabbitmq
  name: rabbitmq-external-client
  labels:
    app: rabbitmq
    type: LoadBalancer
spec:
  type: LoadBalancer
  # create a public ip beforehand and specify here
  loadBalancerIP: <loadbalancerIP>
  externalTrafficPolicy: Local
  ports:
   - name: https
     port: 28041
     targetPort: 15671
     protocol: TCP

   - name: amqps
     port: 24567
     targetPort: 5671
     protocol: TCP
  selector: 
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/instance: rabbitmq
